CMakePM: Ensure CMake file-api reply directory watching

The file-api reply watcher was set after CMake was run, and would work
only once, since FileApiReader::setParameters would be called during
handling of FileApiReader::dirty!

This commit makes sure that the ".cmake/api/reply" directory is watched,
not just after an explicit CMake run.

Fixes: QTCREATORBUG-31536
Change-Id: Ifc2706ec1220acd1dccee38d13c3380333758ec1
Reviewed-by: Eike Ziller <eike.ziller@qt.io>